--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
-    "mdbreact": "^5.2.0",
     "@mui/system": "^5.14.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +15,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "countries-list": "^3.0.6",
+    "mdbreact": "^5.2.0",
     "mui-datatables": "^4.3.0",
     "rc-slider": "^9.7.5",
     "react": "^18.2.0",
@@ -24,6 +24,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
     "react-js-pagination": "^3.0.3",
+    "react-loader-spinner": "^5.4.5",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
