--- a/backend/package.json
+++ b/backend/package.json
@@ -22,10 +22,10 @@
     "mongoose": "^7.5.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.6",
+    "pdfkit": "^0.14.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-  
 }
