--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "countries-list": "^3.0.6",
+    "formik": "^2.4.5",
     "mdbreact": "^5.2.0",
     "mui-datatables": "^4.3.0",
     "rc-slider": "^9.7.5",
@@ -31,7 +32,8 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
